# arm_current_analysis

./: .gitignore  CMakeLists.txt
data/: armsdata.txt  armsdata_J75_11-01.txt  armsdata_J75_11-05(1.3t).txt  armsdata_J75_11-05(1.6t).txt  armsdata_J75_11-06(1.05t).txt  armsdata_J75_11-06(1.35t).txt  model_weights.txt  predictive_table_2.csv  predictive_table_backup_b.csv  weights.txt
include/: learn_predict_table.h  predict_weight.h
include/MotorDAQ/: MotorDAQ.h
src/: MotorDAQ.cpp  calculate_.cpp  learn_predict_table.cpp  learn_predict_table_new.cpp  main.cpp  predict_weight.cpp  predictive_table.csv  test.cpp
src/DrawPicture/: extractData.cpp  main.cpp
src/NewModel/: main.cpp
src/timer_callback/: test.cpp
